--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,101 @@
   </head>
   <body>
     <h1></h1>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      #box {
+        width: 50px;
+        height: 50px;
+
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="jumbotron">
+      <h4>Module 07 - Lesson 01</h4>
+      <h3>Task Manager</h3>
+    </div>
+
+    <!-- <div id="box"></div> -->
+
+    <!-- <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <form class="form-inline">
+            <label class="sr-only " for="inputText">Name</label>
+            <input
+              type="text"
+              class="form-control mb-2 mr-2"
+              id="inputText"
+              placeholder="Enter text..."
+            />
+
+            <button type="submit" class="btn btn-primary mb-2">
+              Add task
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <span>Cras justo odio</span>
+              <button type="button" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </li>
+            <li class="list-group-item">
+              <span>Dapibus ac facilisis in</span>
+              <button type="button" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </li>
+            <li class="list-group-item">
+              <span>Morbi leo risus</span>
+              <button type="button" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </li>
+            <li class="list-group-item list-group-item-success">
+              <span>Porta ac consectetur ac</span>
+              <button type="button" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </li>
+            <li class="list-group-item list-group-item-success">
+              <span>Vestibulum at eros</span>
+              <button type="button" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
