--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,10 @@
 
         border: 1px solid black;
       }
+      .active {
+        color: white;
+        background-color: blue;
+      }
     </style>
   </head>
   <body>
@@ -44,9 +48,19 @@
       <h3>Task Manager</h3>
     </div>
 
+    <!-- <ul id="list"> -->
+      <!-- my comment -->
+      <!-- <li class="active" data-id="1" data-user-name="Bobby">Bobby</li>
+      <li data-id="2"">Peter</li>
+      <li class="my-class" data-id="3">Chris</li>
+      <li data-id="4">Vernon</li>
+    </ul> -->
+
+    <!-- <img src="" data-url="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg"> -->
+
     <!-- <div id="box"></div> -->
 
-    <!-- <div class="container-fluid">
+    <div class="container-fluid">
       <div class="row">
         <div class="col">
           <form class="form-inline">
@@ -67,7 +81,7 @@
       <div class="row">
         <div class="col">
           <ul class="list-group">
-            <li class="list-group-item">
+            <!-- <li class="list-group-item">
               <span>Cras justo odio</span>
               <button type="button" class="close" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -96,12 +110,13 @@
               <button type="button" class="close" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <script src="./index.js" type="module"></script>
+    <script src="./taskManager.js" type="module"></script>
   </body>
 </html>
