--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,84 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 07 - Lesson 02</title>
-    <script src="./index.js"></script>
+    <title>Module 07 - Lesson 01</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      #box {
+        width: 50px;
+        height: 50px;
+
+        border: 1px solid black;
+      }
+      .active {
+        color: white;
+        background-color: blue;
+      }
+    </style>
   </head>
+
   <body>
-    <h1>Module 07 - Lesson 02</h1>
+    <div class="jumbotron">
+      <h4>Module 07 - Lesson 02</h4>
+      <h3>Task Manager</h3>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <form class="form-inline">
+            <label class="sr-only " for="inputText">Name</label>
+            <input
+              type="text"
+              class="form-control mb-2 mr-2"
+              id="inputText"
+              placeholder="Enter text..."
+              name="text"
+            />
+
+            <button type="submit" class="btn btn-primary mb-2">
+              Add task
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <input type="text" id="filter" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <ul class="list-group"></ul>
+        </div>
+      </div>
+    </div>
+
+    <button id="my-button">push me</button>
+    <a id="link" href="https://google.com">Google</a>
+
+    <script src="./index.js" type="module"></script>
+    <script src="./taskManager.js" type="module"></script>
   </body>
 </html>
