--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,8 @@
       </div>
     </div>
 
-    <button id="my-button">push me</button>
-    <a id="link" href="https://google.com">Google</a>
+    <!-- <button id="my-button">push me</button>
+    <a id="link" href="https://google.com">Google</a> -->
 
     <script src="./index.js" type="module"></script>
     <script src="./taskManager.js" type="module"></script>
