--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 00 - Lesson 00</title>
+    <title>Module 09 - Lesson 02</title>
   </head>
   <body>
-    <h1>Module 00 - Lesson 00</h1>
+    <h1 class="title">Module 09 - Lesson 02</h1>
 
-    <script src="./index.js" type="module"></script>
+    <img src="cat.png" alt="cat" />
+
+    <div class="list"></div>
+    <!-- Here will be my awesome program :) -->
   </body>
 </html>
