--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 00 - Lesson 00</title>
+    <title>Module 10 - Lesson 01</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Module 00 - Lesson 00</h1>
+    <h1>Module 10 - Lesson 01</h1>
+
+    <h3>Counters</h3>
+    <hr />
+
+    <div class="counter-1"></div>
+    <div class="counter-2"></div>
+
+    <hr />
+    <button id="b1-minus">Counter 1 -</button>
+    <button id="b1-plus">Counter 1 +</button>
+
+    <hr />
+    <h3>Timers</h3>
+    <hr />
+    <div class="timer-1"></div>
 
     <script src="./index.js" type="module"></script>
   </body>
