--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Module 10 - Lesson 01</title>
     <link rel="stylesheet" href="style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   </head>
   <body>
     <h1>Module 10 - Lesson 01</h1>
@@ -16,13 +23,17 @@
     <div class="counter-2"></div>
 
     <hr />
-    <button id="b1-minus">Counter 1 -</button>
-    <button id="b1-plus">Counter 1 +</button>
+    <button id="b1-minus">Counter 2 -</button>
+    <button id="b1-plus">Counter 2 +</button>
 
     <hr />
     <h3>Timers</h3>
     <hr />
     <div class="timer-1"></div>
+    <div class="timer-2"></div>
+
+    <hr />
+    <button id="message">Show a message</button>
 
     <script src="./index.js" type="module"></script>
   </body>
