--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 09 - Lesson 02</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Module 10 - Lesson 02</title>
   </head>
   <body>
-    <h1 class="title">Module 09 - Lesson 02</h1>
+    <h1>Module 10 - Lesson 02</h1>
 
-    <img src="cat.png" alt="cat" />
+    <!-- <div id="root"></div> -->
 
-    <div class="list"></div>
-    <!-- Here will be my awesome program :) -->
+    <form class="form">
+      <input type="text" name="text" />
+      <button type="submit">Add</button>
+    </form>
+
+    <ul class="todo-list"></ul>
   </body>
 </html>
