--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 00 - Lesson 00</title>
+    <title>Module 12 - Lesson 01</title>
   </head>
   <body>
-    <h1>Module 00 - Lesson 00</h1>
+    <h1>Module 12 - Lesson 01</h1>
 
     <script src="./index.js" type="module"></script>
+    <button id="button">Get Data</button>
+    <h3 id="loader" hidden>Loading...</h3>
+    <ul id="list"></ul>
   </body>
 </html>
