--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 00 - Lesson 00</title>
+    <title>Module 12 - Lesson 02</title>
   </head>
   <body>
-    <h1>Module 00 - Lesson 00</h1>
+    <h1>Module 12 - Lesson 02</h1>
 
-    <script src="./index.js" type="module"></script>
+    <div class="todos">
+      <h2 class="title">Todos</h2>
+      <form class="input-form">
+        <input class="input" type="text" name="text" /><button class="button">
+          + Add
+        </button>
+      </form>
+
+      <h3 class="loader">Loading...</h3>
+      <ul class="todo-list"></ul>
+    </div>
   </body>
 </html>
