--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 13 - Lesson 02</title>
+    <title>Questions & Answers - 2</title>
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    /> -->
+    <link rel="stylesheet" href="./bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="my-styles.css" /> -->
   </head>
   <body>
-    <h1>Module 13 - Lesson 02</h1>
+    <h1>Questions & Answers - 2</h1>
+
+    <button type="button" class="btn btn-primary my-button">Primary</button>
+    <button type="button" class="btn btn-primary">Primary</button>
+
+    <ul id="list"></ul>
 
     <script src="./index.js" type="module"></script>
   </body>
